[package]
name = "advent-of-code"
version = "2.0.23"
authors = ["Robert Klink <roberthklink@gmail.com>"]
edition = "2021"

[lib]
name = "aoc_2023"
path = "aoc-2023/lib.rs"

[dependencies]
aoc-runner = "0.3.0"
aoc-runner-derive = "0.3.0"
regex = "1.10.2"
itertools = "0.12.0"
num-integer = "0.1.45"
array2d = "0.3.0"
indexmap = "2.1.0"
